<resources>
    <string name="app_name">Blood Bank</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lows">All rights reserved ipda3 Tech for software 2018</string>
    <string name="cross">Skip</string>
    <string name="changecode">Password change code</string>
    <string name="remember">Remember me</string>
    <string name="you_forget">did you forget your password</string>
    <string name="entet">Login</string>
    <string name="create_new">Create new account</string>
    <string name="forget">Forget Password</string>
    <string name="send">Send</string>
    <string name="change">Change Password</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="check_code">Confirmation code</string>
    <string name="new_password">New password</string>
    <string name="new_password_sure">Confirm the new password</string>
    <string name="password_sure">confirm password</string>
    <string name="notification">من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من من ررمن </string>
    <string name="bloodtypes">Blood type</string>
    <string name="governorates">Governorates</string>
    <string name="save">Save</string>

    <string name="connect_us">Connect us</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="age">Age</string>
    <string name="numbers">Number of bags</string>
    <string name="hospitalname">إسم المستشفى</string>
    <string name="hospitaladdress">عنوان المستشفى</string>
    <string name="notes">الملاحظات</string>
    <string name="sendrequest">إرسال الطلب</string>
    <string name="care">طريقة الوقاية من الأمراض</string>


    <string name="name">الإسم</string>
    <string name="email">البريد الإلكترونى</string>
    <string name="birthdate">تاريخ الميلاد</string>
    <string name="bloodtype">فصيلة الدم</string>
    <string name="lastdate">اخر تاريخ للتبرع</string>

    <string name="name_">الإسم :</string>
    <string name="age_">العمر :</string>
    <string name="email_">البريد الإلكترونى :</string>
    <string name="birthdate_">تاريخ الميلاد :</string>
    <string name="bloodtype_">فصيلة الدم :</string>
    <string name="lastdate_">اخر تاريخ للتبرع :</string>

    <string name="reg">تسجيل</string>
    <string name="title_activity_articles">ArticlesActivity</string>
    <string name="navigation_drawer_open">Open navigationActivity drawer</string>
    <string name="navigation_drawer_close">Close navigationActivity drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="articles">المقالات</string>
    <string name="requests">طلبات التبرع</string>
    <string name="hint">ادخل كلمة البحث هنا ....</string>


    <string name="requestANameTitle">طلب تبرع : احمد محمد</string>
    <string name="requestAName">الإسم : احمد محمد</string>
    <string name="requestAge">العمر : 21 سنة</string>
    <string name="requestTypeBlood">+فصيلة الدم : A</string>
    <string name="requestNumbers">عدد الأكياس المطلوبة : 3 أكياس</string>
    <string name="requestHospital">المستشفى : الخير التخصصى</string>
    <string name="requestHospialAdress">عنوان المستشفى : 21 شارع عبد العزيز بجوار المرور</string>
    <string name="requestPhoneNumber">رقم الجوال : 01270351728</string>
    <string name="details">التفاصيل</string>
    <string name="call">إتصال</string>
    <string name="nameof">اسم الحالة: احمد محمد احمد</string>
    <string name="hospital">مستشفى:  القصر العينى</string>
    <string name="cityy">المدينة:  المنصورة</string>

    <string name="adjust_title">تعديل البيانات</string>
    <string name="adjust_name">عمرو محمد</string>
    <string name="adjust_email">amrramadan888@gmail.com</string>
    <string name="adjust_birthdate">1993/10/24</string>
    <string name="adjust_bloodtype">A+</string>
    <string name="adjust_lastdate">2018/11/30</string>
    <string name="adjust_phone">01270351728</string>
    <string name="adjust_password">*********</string>
    <string name="adjust">تعديل</string>
    <string name="chooseloc">إختيار الموقع</string>
    <string name="o">O+</string>
    <string name="a">A-</string>
    <string name="aa">A+</string>
    <string name="ab">AB-</string>
    <string name="abb">AB+</string>
    <string name="oo">O-</string>
    <string name="one">1</string>
    <string name="enter_email">برجاء إدخال البريد الإلكترونى</string>
    <string name="invalid_email">البريد الالكترونى يجب ان يكون بهذا الشكل  example@example.com</string>
    <string name="invalid_password">Password mast be more than 6 char and number</string>
    <string name="invalid_Phone">Phone number mast be 11 number</string>
    <string name="invalid_confirm_password">تأكيد كلمة المرور غير متطابقة</string>

    <string name="title_activity_maps">Map</string>
    <string name="careing">الوقاية من الأمراض</string>
    <string name="connection">برجاء التحقق من الإتصال بالإنترنت وإعادة تشغيل التطبيق مرة اخرى</string>
    <string name="offline">برجاء التحقق من الإتصال بالإنترنت</string>

    <string name="error">حدث خطأ ما</string>
    <string name="waiit">برجاء الإنتظار...</string>
    <string name="callUsMsg">تم إرسال الرسالة</string>
    <string name="enterKeyword">ادخل كلمة البحث هنا ...</string>
    <string name="location">اختيار الموقع</string>
    <string name="GPSAlertDialogTitle">تنبيه</string>
    <string name="GPSAlertDialogMessage">برجاء تشغيل محدد المواقع</string>
    <string name="cancel">إلغاء</string>
    <string name="donation">طلب تبرع :</string>
    <string name="no_results">لا يوجد نتائج</string>
    <string name="enterPhone">من فضلك ادخل رقم الهاتف</string>
    <string name="enterPassword">من فضلك ادخل كلمة المرور الخاصة بك</string>
    <string name="passwordLengh">يجب ان يتكون رقم الهاتف من 11 رقم</string>
    <string name="passwordWeak">كلمة المرور ضعيفة</string>
    <string name="logging">جارى تسجيل الدخول</string>
    <string name="notiii">التنبيهات</string>
    <string name="about">عن التطبيق</string>
    <string name="call_us">تواصل معنا</string>
    <string name="fav">المفضلة</string>
    <string name="noti_porep">إعدادات الإشعارات</string>
    <string name="adjustInf">تعديل البيانات</string>
    <string name="wantLogin">هل تريد تسجيل الخروج ؟</string>
    <string name="yes">نعم</string>
    <string name="cancell">الغاء</string>
    <string name="birthDate">تاريخ الميلاد</string>
    <string name="lastDate">اخر تاريخ للتبرع</string>
    <string name="enterMessAdress">ادخل عنوان الرسالة</string>
    <string name="messageContent">ادخل نص الرسالة</string>
    <string name="enterPatientName">برجاء إدخال اسم المريض</string>
    <string name="enterPatientAge">برجاء إدخال عمر المريض</string>
    <string name="enterbagsNumber">برجاء إدخال عدد الأكياس المطلوبة</string>
    <string name="enterHosName">برجاء إدخال إسم المستشفى</string>
    <string name="enterPhonee">برجاء إدخال رقم الهاتف</string>
    <string name="enterNotes">برجاء إدخال الملاحظات</string>
    <string name="enterUserName">برجاء إدخال اسم المستخدم</string>
    <string name="enterEmaill">برجاء إدخال البريد الإلكترونى</string>
    <string name="enterBirth">برجاء إدخال تاريخ ميلادك</string>
    <string name="enterLast">برجاء إدخال اخر تاريخ للتبرع</string>
    <string name="enterPhoneeeee">برجاء إدخال رقم الهاتف</string>
    <string name="enterPasswordd">برجاء إدخال كلمة المرور</string>
    <string name="enterPasswordAgain">برجاء إدخال كلمة المرور مرة اخرى</string>
    <string name="invalid_Email">البريد الإكتروني يجب ان يكون بهذه الصيغة \" example@example.com\".</string>
    <string name="no_notificaation">لا يوجد إشعارات جديدة</string>
    <string name="phonemm">jrgkjhertjek</string>
    <string name="select_city">برجاء اختيار المدينة</string>
    <string name="select_city_"> اختر المدينة</string>
    <string name="select_governrate">برجاء اختيار المحافظة</string>
    <string name="no_items">لا يوجد عناصر</string>

    <string name="select_blood_bank">برجاء اختيار فصيلة الدم</string>
    <string name="failed_required">الحقل مطلوب</string>
    <string name="select_governorates">اختر المحافظه</string>
    <string name="date_btd_title">اختر تاريخ ميلادك</string>
    <string name="date_last_title">اختر اخر تاريخ للتبرع</string>
    <string name="check_your_email">برجاء فحص بريدك الإلكترونى</string>
    <string name="register">جارى تسجيل حسابك ...</string>
    <string name="patient_name">اسم الحالة:</string>
    <string name="hospital_name">المستشفي :</string>
    <string name="hospital_address">عنوان المستشفي :</string>
    <string name="city_name">المدينة:</string>
    <string name="posts">المقالات</string>
    <string name="donations">طلبات التبرع</string>
    <string name="select_govarnment">اختر المحافظه</string>
    <string name="select_blood">اختر فصيلة الدم</string>
    <string name="select_categories">جميع الفئات</string>
    <string name="phone_">رقم الجوال :</string>
    <string name="counter_order">عدد الأكياس المطلوبة :</string>
    <string name="home">الرئيسية</string>
    <string name="logout">؟!هل انت متأكد انك تريد تسجيل الخروج</string>

    <string name="gharbia">الغربية</string>
    <string name="menya">المنيا</string>
    <string name="cairo">القاهرة</string>
    <string name="kafrelshiekh">كفر الشيخ</string>
    <string name="sharqia">الشرقية</string>
    <string name="daqhlia">الدقهلية</string>

    <string name="eljawal">الجوال : 01270351728</string>
    <string name="emailaddress">البريد الالكترونى : amrramadan888@gmail.com</string>

    <string name="notificationforrequest">تنبيه بخصوص طلبك</string>
    <string name="notificationtime">الاحد 2018/11/30"</string>
    <string name="enterhospitaladdress">برجاء ادخال عنوان المستشفى او اختياره من الخريطة</string>
    <string name="add_to_favourite">تمت الإضافة</string>
    <string name="remove_from_favourite">تمت الإزالة</string>
    <string name="all_blood">جميع الفصائل</string>
    <string name="all_governorates">جميع المحافظات</string>
    <string name="title_activity_maps_activityzdsgfdgs">Map</string>
</resources>
