<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.userCycle.ChangePasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/change_password_fragment_ll_sub_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/splash"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimens_splash_img2"
                android:layout_height="@dimen/dimens_splash_img"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_6xl"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimens_l"
                android:text="@string/changecode"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_size_m"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/change_password_fragment_et_check"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_xxxxl"
                android:layout_marginEnd="@dimen/dim_m"
                android:layout_marginStart="@dimen/dim_m"
                android:layout_marginTop="@dimen/dimens_l"
                android:background="@drawable/shape_edit_text_bg"
                android:hint="@string/check_code"
                android:inputType="number"
                android:paddingStart="@dimen/dim_m"
                android:paddingEnd="@dimen/dim_m"
                android:textSize="@dimen/txt_size_m"
                android:textStyle="bold"
                android:gravity="start|center"/>

            <EditText
                android:id="@+id/change_password_fragment_et_new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_xxxxl"
                android:layout_marginTop="@dimen/dimens_l"
                android:layout_marginEnd="@dimen/dim_m"
                android:layout_marginStart="@dimen/dim_m"                android:background="@drawable/shape_edit_text_bg"
                android:gravity="start|center"
                android:hint="@string/new_password"
                android:paddingStart="@dimen/dim_m"
                android:paddingEnd="@dimen/dim_m"
                android:textSize="@dimen/txt_size_m"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/change_password_fragment_et_confirmation_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_xxxxl"
                android:layout_marginTop="@dimen/dimens_l"
                android:layout_marginEnd="@dimen/dim_m"
                android:layout_marginStart="@dimen/dim_m"                android:background="@drawable/shape_edit_text_bg"
                android:gravity="start|center"
                android:hint="@string/new_password_sure"
                android:paddingStart="@dimen/dim_m"
                android:paddingEnd="@dimen/dim_m"
                android:textSize="@dimen/txt_size_m"
                android:textStyle="bold" />

            <Button
                android:id="@+id/change_password_fragment_btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_xl"
                android:layout_marginEnd="@dimen/dim_m"
                android:layout_marginStart="@dimen/dim_m"                android:layout_marginBottom="@dimen/dimens_l"
                android:background="@drawable/edit_green"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_m" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>