<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/login_fragment_ll_sub_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/forget_password_fragment_iv_logo"
                android:layout_width="@dimen/dimens_splash_img2"
                android:layout_height="@dimen/dimens_splash_img"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens_l"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/login_fragment_et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_xxxxl"
                android:layout_marginEnd="@dimen/dimens_l"
                android:layout_marginStart="@dimen/dimens_l"
                android:layout_marginTop="@dimen/txt_size_m"
                android:background="@drawable/shape_edit_text_bg"
                android:hint="@string/phone"
                android:inputType="number"
                android:paddingEnd="@dimen/dim_m"
                android:paddingStart="@dimen/dim_m"
                android:textSize="@dimen/txt_size_m" />

            <EditText
                android:id="@+id/login_fragment_et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_xxxxl"
                android:layout_marginEnd="@dimen/dimens_l"
                android:layout_marginStart="@dimen/dimens_l"
                android:layout_marginTop="@dimen/txt_size_m"
                android:background="@drawable/shape_edit_text_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/dim_m"
                android:paddingStart="@dimen/dim_m"
                android:textSize="@dimen/txt_size_m" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_l">

                <CheckBox
                    android:id="@+id/login_fragment_cb_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/dimens_l"
                    android:layout_marginStart="@dimen/dimens_l"
                    android:buttonTint="@color/blue"
                    android:checked="false"
                    android:layoutDirection="rtl"
                    android:text="@string/remember" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/login_fragment_iv_password_icon"
                        android:layout_width="@dimen/dimens_between"
                        android:layout_height="@dimen/dimens_between"
                        android:layout_marginEnd="@dimen/dim_m"
                        android:layout_marginTop="@dimen/dim_m"
                        android:layout_toStartOf="@id/login_fragment_tv_forget_password"
                        android:src="@drawable/password" />

                    <TextView
                        android:id="@+id/login_fragment_tv_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/dim_m"
                        android:text="@string/you_forget"
                        android:textAlignment="center"
                        android:textColor="@android:color/black" />
                </RelativeLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/login_fragment_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens_l"
                android:layout_marginStart="@dimen/dimens_l"
                android:layout_marginTop="@dimen/dimens_xl"
                android:background="@drawable/edit_green"
                android:text="@string/entet"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_m" />

            <Button
                android:id="@+id/login_fragment_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_l"
                android:layout_marginEnd="@dimen/dimens_l"
                android:layout_marginStart="@dimen/dimens_l"
                android:layout_marginTop="@dimen/dimens_l"
                android:background="@drawable/edit_blue"
                android:text="@string/create_new"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_m" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>